--- a/.htaccess
+++ b/.htaccess
@@ -1,32 +1,30 @@
-//Rewrite to www
-Options +FollowSymLinks
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^hacking-php-game.appspot.com[nc]
-RewriteRule ^(.*)$ http://www.hacking-php-game.appspot.com$1 [r=301,nc]
+# basic compression
+<IfModule mod_gzip.c>
+	mod_gzip_on Yes
+	mod_gzip_dechunk Yes
+	mod_gzip_item_include file \.(html?|txt|css|js)$
+	mod_gzip_item_include mime ^text/.*
+	mod_gzip_item_include mime ^application/x-javascript.*
+	mod_gzip_item_exclude mime ^image/.*
+	mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</IfModule>
+# Protect files and directories
+<FilesMatch "(\.(engine|inc|info|install|module|profile|po|sh|.*sql|theme|tpl(\.php)? |xtmpl)|code-style\.pl|Entries.*|Repository|Root|Tag|Template)$">
+	Order allow,deny
+</FilesMatch>
+# Don’t show directory listings
+Options -Indexes
+# Basic rewrite rules, stop unneeded PERL bot, block subversion directories
+<IfModule mod_rewrite.c>
+	RewriteEngine On
+	RewriteRule ^(.*/)?\.svn/ - [F,L]
+	ErrorDocument 403 "Access Forbidden"
+	RewriteCond %{HTTP_USER_AGENT} libwww-perl.*
+	RewriteRule .* – [F,L]
+</IfModule>
 
-//Custom 400 errors
-ErrorDocument 400 /home/www/401.html
-
-//Custom 401 errors
-ErrorDocument 401 /home/www/402.html
-
-//Custom 403 errors
-ErrorDocument 403 /home/www/403.html
-
-//Custom 404 errors
-ErrorDocument 404 /home/www/404.html
-
-//Custom 500 errors
-ErrorDocument 500 /home/www/500.html
-
-//Change default directory page
-DirectoryIndex /home/www/
-
-//Prevent viewing of .htaccess file
-<Files .htaccess>
-order allow,deny
-deny from all
-</Files>
-
-//Prevent directory listings
-Options All -Indexes
+ErrorDocument 400 /error/bad-request.html
+ErrorDocument 401 /error/unauthorised.html
+ErrorDocument 403 /error/forbidden.html
+ErrorDocument 404 /error/file-not-found.html
+ErrorDocument 500 /error/internal-server-error.html
