--- a/app.yaml
+++ b/app.yaml
@@ -5,9 +5,15 @@ env: flex
 # The settings below are to reduce costs during testing and are not appropriate
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/python/configuring-your-app-with-app-yaml
+runtime_config:
+  document_root: www
 manual_scaling:
   instances: 1
 resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
+  env_variables:
+  MYSQL_DSN: mysql:unix_socket=/cloudsql/hacking-php-game:europe-west2:hacks-db01;dbname=PHPHackGame
+  MYSQL_USER: hack_dbadmin
+  MYSQL_PASSWORD: gm256mwE5pmdpMw0bAN
